[gd_scene load_steps=11 format=2]

[ext_resource path="res://world/map_room.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/level_scenes/level_12.gd" type="Script" id=2]
[ext_resource path="res://props/platforms/block_platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://ldtk/grotto/level_12.ldtkl" type="PackedDataContainer" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("block_platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("block_platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1, 60.0, 2.0 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "closed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("block_platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("block_platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("block_platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1, 60.0, 2.0 ],
"method": "shake"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 112, 4 )

[node name="level_12" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_LDtk_Resource = ExtResource( 4 )

[node name="background" parent="." index="1"]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 327696, 131078, 0, 196624, 131079, 0, 196624, 131080, 0, 327696, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 327696, 196615, 0, 327696, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 262169, 262148, 0, 262169, 262149, 0, 262169, 262150, 0, 262169, 262151, 0, 262169, 262152, 0, 262169, 262153, 0, 262169, 262154, 0, 262169, 262155, 0, 262169, 262156, 0, 262169, 262157, 0, 262169, 262158, 0, 262169, 262159, 0, 262169, 262160, 0, 262169, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 327705, 327684, 0, 327705, 327685, 0, 327705, 327686, 0, 327705, 327687, 0, 327705, 327688, 0, 327705, 327689, 0, 327705, 327690, 0, 327705, 327691, 0, 327705, 327692, 0, 327705, 327693, 0, 327705, 327694, 0, 327705, 327695, 0, 327705, 327696, 0, 327705, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 393219, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 524291, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 458757, 589827, 0, 458758, 589828, 0, 458759, 589829, 0, 458760, 589830, 0, 458761, 589831, 0, 458762, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 458757, 589837, 0, 458758, 589838, 0, 458759, 589839, 0, 458760, 589840, 0, 458761, 589841, 0, 458762, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 524293, 655363, 0, 524294, 655364, 0, 524295, 655365, 0, 524296, 655366, 0, 524297, 655367, 0, 524298, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 524293, 655373, 0, 524294, 655374, 0, 524295, 655375, 0, 524296, 655376, 0, 524297, 655377, 0, 524298, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )
LDtk_Resource = ExtResource( 4 )
levels = [ "level_12" ]

[node name="back_decoration" parent="." index="2"]
tile_data = PoolIntArray( 131078, 0, 131083, 131079, 0, 131083 )
LDtk_Resource = ExtResource( 4 )
levels = [ "level_12" ]

[node name="water_lava" parent="." index="6"]
LDtk_Resource = ExtResource( 4 )
levels = [ "level_12" ]

[node name="walls" parent="." index="7"]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 458753, 65537, 0, 0, 65538, 0, 0, 65539, 0, 65542, 65540, 0, 196611, 65541, 0, 196611, 65542, 0, 196611, 65543, 0, 196612, 65544, 0, 196611, 65545, 0, 196611, 65546, 0, 196611, 65547, 0, 196612, 65548, 0, 196611, 65549, 0, 196612, 65550, 0, 196611, 65551, 0, 65542, 65552, 0, 196612, 65553, 0, 196611, 65554, 0, 0, 65555, 0, 0, 131072, 0, 458754, 131073, 0, 0, 131074, 0, 131077, 131075, 0, 131078, 131085, 0, 327680, 131087, 0, 131078, 131089, 0, 65538, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 131077, 196625, 0, 131074, 196626, 0, 0, 196627, 0, 458753, 262144, 0, 0, 262145, 0, 0, 262146, 0, 65541, 262161, 0, 131074, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 65541, 327685, 0, 262150, 327686, 0, 262150, 327693, 0, 262150, 327694, 0, 262150, 327697, 0, 131074, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 131077, 393233, 0, 196610, 393234, 0, 196612, 393235, 0, 196612, 458752, 0, 0, 458753, 0, 0, 458754, 0, 131077, 458761, 0, 262150, 458762, 0, 262150, 458770, 0, 327680, 524288, 0, 0, 524289, 0, 0, 524290, 0, 65541, 589824, 0, 0, 589825, 0, 0, 589826, 0, 65541, 589829, 0, 262150, 589830, 0, 262150, 589837, 0, 262150, 589838, 0, 262150, 589841, 0, 2, 589842, 0, 3, 589843, 0, 4, 655360, 0, 0, 655361, 0, 458754, 655362, 0, 65541, 655377, 0, 65538, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 458753, 720898, 0, 458754, 720899, 0, 4, 720900, 0, 3, 720901, 0, 3, 720902, 0, 4, 720903, 0, 3, 720904, 0, 3, 720905, 0, 4, 720906, 0, 3, 720907, 0, 4, 720908, 0, 4, 720909, 0, 4, 720910, 0, 3, 720911, 0, 4, 720912, 0, 3, 720913, 0, 0, 720914, 0, 458754, 720915, 0, 0 )
LDtk_Resource = ExtResource( 4 )
levels = [ "level_12" ]

[node name="restart_position" type="Position2D" parent="walls" index="0"]
position = Vector2( 160, 176 )
__meta__ = {
"_edit_lock_": true
}

[node name="gate" type="Node2D" parent="walls" index="1"]
show_behind_parent = true
position = Vector2( 288, 112 )
__meta__ = {
"_edit_lock_": true
}

[node name="block_platform" parent="walls/gate" index="0" instance=ExtResource( 3 )]
position = Vector2( 0, -32 )

[node name="block_anim" type="AnimationPlayer" parent="walls/gate" index="1"]
anims/RESET = SubResource( 1 )
anims/close = SubResource( 2 )
anims/closed = SubResource( 3 )
anims/default = SubResource( 4 )
anims/open = SubResource( 5 )

[node name="trigger_gate" type="Area2D" parent="walls/gate" index="2"]
collision_layer = 0
collision_mask = 16
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/gate/trigger_gate" index="0"]
position = Vector2( -128, 66 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="hazards" parent="." index="8"]
LDtk_Resource = ExtResource( 4 )
levels = [ "level_12" ]

[connection signal="body_entered" from="walls/gate/trigger_gate" to="." method="_on_trigger_gate_body_entered" flags=7]
